Fix related product on tablet

--- a/wp-content/themes/sutunam/scss/page/_product-detail.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-detail.scss
@@ -374,14 +374,15 @@
                     float: right;
                     line-height: normal;
                     min-height: 35px;
-                    margin: 0 10px;
+                    margin: 0;
+                    padding: 0 10px;
                     position: relative;
                     del {
                         @include font('font-roboto-medium');
                         margin: 0;
                         position: absolute;
                         bottom: 0;
-                        right: 0;
+                        right: 10px;
                     }
                     ins {
                         @include font('font-roboto-bold');
@@ -513,6 +514,21 @@
                     .image {
                         height: 33.2vh;
                     }
+                    .info {
+                        width: 100%;
+                        min-height: inherit;
+                        h3, h4 {
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                        }
+                    }
+                    .price {
+                        width: 100%;
+                        text-align: left;
+                        min-height: inherit;
+                        margin-top: 5px;
+                    }
                 }
             }
         }
@@ -620,9 +636,6 @@
                     .image {
                         height: 250px;
                         height: 38.2vh;
-                    }
-                    .info {
-                        width: 60%;
                     }
                 }
             }
